--- a/tutorials/BareBonesML/index.org
+++ b/tutorials/BareBonesML/index.org
@@ -1,9 +1,8 @@
 #+SETUPFILE: https://fniessen.github.io/org-html-themes/org/theme-readtheorg.setup
 #+Title: BareBonesML: Inner workings of ML algorithms
-#+SUBTITLE: /Supervised Algorithms/
+# #+SUBTITLE: /Supervised Algorithms/
 #+OPTIONS: \n:t
 #+INCLUDE: "../../snippets/darkmode.org" 
-
 
 This repository contains Python scripts that implement machine learning
 algorithms from scratch. The purpose of this repository is to provide simple and
@@ -12,8 +11,9 @@ their inner workings. The focus is on clarity and simplicity, and the code is
 not intended to replace standard machine learning libraries for use in
 production. 
 
+* Supervised Algorithms
 
-* Support Vector Machine (SVM)
+** Support Vector Machine (SVM)
 Central to the SVM is the concept of maximizing the margin between classes,
 achieved by finding the hyperplane that separates the data points of different
 classes while maximizing the distance between the hyperplane and the nearest
@@ -64,14 +64,14 @@ This works well for datasets which have:
 Real world datasets with noise and non-linear speration boudaries are dealt with
 as follows:
 
-** Dealing with outliers: The Slack term
+*** Dealing with outliers: The Slack term
 Slack refers to the allowance of misclassification or errors in the SVM
 optimization process. Introducing slack enables SVM to handle linearly/non-linearly
 separable data by allowing some data points to fall within the margin or even on
 the wrong side of the decision boundary. This flexibility helps SVM generalize
 better to complex datasets, although too much slack can lead to overfitting.
 
-** Dealing with non-linear speration boundires: Kernel Trick
+*** Dealing with non-linear speration boundires: Kernel Trick
 Thee kernel trick is a method used to extend SVMs for non-linear decision
 boundaries without explicitly mapping the input data into a higher-dimensional
 feature space. It works by implicitly computing the dot product between data
@@ -85,7 +85,7 @@ diverse datasets and achieve high classification accuracy in various real-world
 applications.
 
 
-* Naive Bayes
+** Naive Bayes
 Naive Bayes is a probabilistic algorithm commonly used for classification
 tasks. Its simplicity, speed, and effectiveness make it a popular choice for
 text classification, spam filtering, and other tasks involving high-dimensional
@@ -142,7 +142,7 @@ Output: Predicted class labels for the test set.
 
 #+end_src
 
-** Limitations
+*** Limitations
   - *Assumption of Feature Independence*
   - *Handling of Continuous Features*
     Naive Bayes is inherently designed for categorical features and assumes a
@@ -160,7 +160,7 @@ especially in text classification and other domains with high-dimensional and
 sparse feature spaces.
 
 
-* Ensemble Learning
+** Ensemble Learning
 Ensemble learning is a ML technique that combines the predictions of multiple
 individual models to produce a stronger overall prediction. The idea behind
 ensemble learning is to leverage the diversity of different models' predictions
@@ -180,9 +180,14 @@ The major types of ensemble learning are:
   minimize the error on the subset of training datapoints that had the largest
   error in the previous step. 
 
+*Limitations*
+
+- Both Bagging and Boosting methods are good are reducing the variance
+- Bagging doesn't reduce the Bias
+- Boosting is prone to overfitting
 
 
-** Random Forest
+*** Random Forest (Bagging)
 Random Forest is popular ensemble learning algorithm based on */Bagging/*.
 During the training phase, multiple decision trees are trained.  Each decision
 tree in is trained on a bootstraped subset (with replacement) of the training
@@ -242,9 +247,52 @@ predict(forest, X_test):
     return aggregate(predictions)
 #+end_src
 
-* Optimization techniques
 
-** Simulated annealing: A technique to find approximate global optimum in hightly rugged energy landscape
+** Gradient Boosting Machine
+It works by combining multiple weak learners, typically decision trees, to
+create a strong learner that can make accurate predictions. Unlike traditional
+boosting algorithms that focus on re-weighting misclassified samples, gradient
+boosting optimizes the model by sequentially fitting new weak learners to the
+residuals or errors made by the previous ones. This iterative process involves
+training each new weak learner to predict the residuals left over by the
+ensemble of existing weak learners, gradually reducing the errors in
+prediction. It is widely used in various domains, including regression,
+classification, and ranking tasks, and popular implementations like XGBoost and
+LightGBM have made it a cornerstone of modern machine learning workflows.
+
+[[https://github.com/shrisharaob/BarebonesML/blob/main/supervised/gradient_boosting_machine.py][Here is the impementation of gbm from scratch]]
+
+
+* Unsupervised Algorithms
+
+** K-Means Clustering
+K-Means is an algorithm used for partitioning a dataset into K distinct,
+non-overlapping clusters. The algorithm works by iteratively assigning data
+points to the nearest cluster centroid and then updating the centroids based on
+the mean of the data points assigned to each cluster. This process continues
+until the centroids no longer change significantly or a specified number of
+iterations is reached. K-means aims to minimize the within-cluster sum of
+squares, essentially minimizing the distance between data points within the same
+cluster while maximizing the distance between different clusters.
+
+Here is the logic:
+
+#+begin_src
+1. Initialize K cluster centroids randomly.
+2. Repeat until convergence:
+    a. Assign each data point to the nearest cluster centroid.
+    b. Recompute the cluster centroids as the mean of the data points assigned
+       to each cluster.
+3. Convergence criteria:
+    - No change in cluster assignments for any data point.
+    - Maximum number of iterations reached.
+#+end_src
+
+- [[https://github.com/shrisharaob/BarebonesML/blob/main/unsupervised/k_means.py][A simple implementation can be found here]]
+
+** Optimization techniques
+
+*** Simulated annealing: A technique to find approximate global optimum in hightly rugged energy landscape
 Simulated annealing is like a smart explorer searching for the highest peak in a
 rugged landscape. Instead of following a strict path, it takes detours and
 explores different routes, sometimes even climbing uphill initially. This
