--- a/posts/physics/qft/index.org
+++ b/posts/physics/qft/index.org
@@ -3,3 +3,7 @@
 
 
 * [[../../../tutorials/qft_overview/index.org][An Overview Quantuam Field Theory]]
+* [[../../../tutorials/qft_overview/index.org][Lay of the Land]]
+
+
+
