--- a/posts/tutorials_list/list_of_tutorials/index.org
+++ b/posts/tutorials_list/list_of_tutorials/index.org
@@ -4,6 +4,7 @@
 
 * Physics
   - [[../../../tutorials/qft_overview/index.org][An Overview of Qantum Field Theory (QFT)]]
+  - [[../../../tutorials/qft_overview/chapter_1.org][Lay of the Land]]
     
 * Machine Learning / AI
   + [[../../../tutorials/BareBonesML/index.org][Building ML algorithms from scratch in Python]]
