--- a/posts/poetry/the_broken_tower_crane/index.org
+++ b/posts/poetry/the_broken_tower_crane/index.org
@@ -1,9 +1,11 @@
 #+Title: The Broken Tower
-#+SUBTITLE: by Hart Crane
+
 #+options: \n:t
 
 # #+begin_export html
 # <div title="analysi">
+
+by **Hart Crane**
 
 The bell-rope that gathers God at dawn
 Dispatches me as though I dropped down the knell
