--- a/tutorials/qft_overview/chapter_1.org
+++ b/tutorials/qft_overview/chapter_1.org
@@ -2,19 +2,19 @@
 #+TITLE: QFT: Lay of the land
 #+INCLUDE: "../../snippets/darkmode.org" 
 #+STARTUP: latexpreview
+#+LaTeX_+HEADER: \usepackage{amsmath} 
 #+OPTIONS: tex:t
 
 
 * Lagrangian Formalism
 todo
 
-
 * Spin 0
 
 ** Lagrangian Density
 
 \begin{align}
-L &= -\frac{1}{2} \sum_{μ, ν} η^{μν} \frac{\partial φ}{x^μ}
+\mathcal{L} &= -\frac{1}{2} \sum_{μ, ν} η^{μν} \frac{\partial φ}{x^μ}
       \frac{\partial φ}{x^ν} - \frac{1}{2} κ^2 φ^2 \\
 &= \frac{1}{2} \left[ \Box φ - κ^2 φ^2 \right]
 \end{align} 
@@ -31,7 +31,7 @@ The equations of motion for a spin 0 particle is given by
 
 ** Dirac Lagrangian Density
 \begin{equation}
-L = i \sum_{μ} \bar{Ψ}\, γ^{μ} \frac{\partial}{\partial X^μ} Ψ
+\mathcal{L} = i \sum_{μ} \bar{Ψ}\, γ^{μ} \frac{\partial}{\partial X^μ} Ψ
    - m\bar{Ψ}\, Ψ
 \end{equation}
 
@@ -48,7 +48,7 @@ i \sum_{μ} γ^{μ} \frac{\partial}{\partial X^μ} Ψ = m Ψ
 ** Maxwell Lagrangian Density
 
 \begin{equation}
-L = - \frac{1}{4} \sum_{μ, ν} F^{μν} F_{μν}
+\mathcal{L} = - \frac{1}{4} \sum_{μ, ν} F^{μν} F_{μν}
 \end{equation}
 
 ** Maxwell's Equations
@@ -63,7 +63,7 @@ The equations of motion for a spin 1 particle is given by:
 
 ** Einstein-Hilbert Lagrangian Density
 \begin{equation}
-L = \frac{1}{16 π G} g^{μν} R_{μν}
+\mathcal{L} = \frac{1}{16 π G} g^{μν} R_{μν}
 \end{equation}
  
 ** Einstein's Equations
