--- a/posts/physics/physics.org
+++ b/posts/physics/physics.org
@@ -1,1 +1,2 @@
-- [[file:qft/index.org][QFT]]
+- <2024-03-21 Thu>  [[file:spin_stats_theorem/index.org][Do we really understand the Spin Statistics theorem?]]
+- <2024-02-07 Wed>  [[file:qft/index.org][QFT]]
