--- a/posts/tutorials_list/tutorials_list.org
+++ b/posts/tutorials_list/tutorials_list.org
@@ -1,1 +1,1 @@
-- [[file:list_of_tutorials/index.org][List of Tutorials]]
+- <2024-02-07 Wed>  [[file:list_of_tutorials/index.org][List of Tutorials]]
