--- a/posts/philosophy/philosophy.org
+++ b/posts/philosophy/philosophy.org
@@ -1,2 +1,2 @@
-- [[file:hegel_pos/index.org][Hegel's Phenomenology of Spirit (POS)]]
-- [[file:hegel_pos/hegel_pos_preface/index.org][POS: Preface]]
+- <2024-02-11 Sun>  [[file:hegel_pos/index.org][Hegel's Phenomenology of Spirit (POS)]]
+- <2024-02-11 Sun>  [[file:hegel_pos/hegel_pos_preface/index.org][POS: Preface]]
