--- a/posts/philosophy/hegel_pos/index.org
+++ b/posts/philosophy/hegel_pos/index.org
@@ -1,5 +1,7 @@
 #+Title: Hegel's Phenomenology of Spirit (POS)
-#+SUBTITLE: Chapter wise notes
+#+Date:[2024-02-23 Fri]
+
+**Chapter wise notes**
 
 * Preface
  - [[./hegel_pos_preface/index.org][The imposibility of writing a preface]]
