--- a/posts/physics/spin_stats_theorem/index.org
+++ b/posts/physics/spin_stats_theorem/index.org
@@ -1,4 +1,5 @@
 #+Title: Do we really understand the Spin Statistics theorem?
+#+Date: [2024-03-25 Mon]
 #+options: \n:t
 
 * Quantum Quandaries and Existential Angst
