--- a/tutorials/polyglot/index.org
+++ b/tutorials/polyglot/index.org
@@ -1,5 +1,6 @@
 #+SETUPFILE: https://fniessen.github.io/org-html-themes/org/theme-readtheorg.setup
 #+Title: Polyglot
+#+Date: [2024-02-21 Wed]
 #+OPTIONS: \n:t
 #+INCLUDE: "../../snippets/darkmode.org" 
 
