--- a/tutorials/stable_difussion/index.org
+++ b/tutorials/stable_difussion/index.org
@@ -1,6 +1,6 @@
 #+SETUPFILE: https://fniessen.github.io/org-html-themes/org/theme-readtheorg.setup
 #+Title: Playing with StableDiffusion: A Fascinating Algorithm for Image Generation
-
+#+Date: [2024-02-22 Thu]
 
 * Introduction
 
