--- a/posts/philosophy/consious_realism/index.org
+++ b/posts/philosophy/consious_realism/index.org
@@ -73,7 +73,7 @@ evolve over time. The model includes the following key components:
       then would we construct a formal measurable space of experiences?
   - ....
 
-  In order to explain conscious experiences they introduce this model, are
+  In order to explain conscious experiences they introduce this model, are they
   commiting grave philosophical mistakes by unintenstionally hiding behind the facade
   of a seemingly solid toy mathematical model?
   
